--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <maestro-app>Loading...</maestro-app>
+    <climbing-guide-app>Loading...</climbing-guide-app>
 </body>
 
 </html>
